# token-goblin

./: .gitignore  Cargo.toml  README.md  r-a.bugreport.txt  todo.md
.cargo/: config.toml
example_readme/: Cargo.toml  README.md
example_readme/examples/: brainfuck.rs  decl-proc.rs  eval.rs  generate_enums.rs  generate_getters.rs  ttmunch-replace.rs
example_readme/src/: lib.rs
example_readme/tests/: use_reexported_munch.rs
external-testbed/: Cargo.toml
fixtures/: .gitignore
fixtures/configs/: build-dir.toml  empty.toml  target-dir.toml
fixtures/tests/: module_visibility_fail.rs  module_visibility_fail.stderr  module_visibility_pass.rs
fixtures/tests/cargo-config/: Cargo.toml
fixtures/tests/cargo-config/src/: lib.rs
fixtures/tests/module-path/: Cargo.toml
fixtures/tests/module-path/benches/: bench.rs
fixtures/tests/module-path/examples/: demo.rs
fixtures/tests/module-path/src/: lib.rs  main.rs  shared_mod.rs
fixtures/tests/module-path/tests/: integration.rs
fixtures/tests/smoke-macro/: Cargo.toml
fixtures/tests/smoke-macro/src/: lib.rs
fixtures/tests/trybuild-pass-emul/: Cargo.toml  main.rs
hacks/: README.md
hacks/dyload/: Cargo.toml  README.md
hacks/dyload/dylib-test/: Cargo.toml
hacks/dyload/dylib-test/src/: lib.rs
hacks/dyload/some-test/: Cargo.toml
hacks/dyload/some-test/src/: main.rs
hacks/export-path/: Cargo.toml  README.md
hacks/export-path/src/: lib.rs
macro/: Cargo.toml  build.rs
macro/src/: dylib.rs  errors.rs  lib.rs  macro_impl.rs  metadata.rs  munch.rs  path.rs  rustc_meta.rs  template.rs
macro/template/: Cargo.toml  build.rs
macro/template/dylib-test/: Cargo.toml
macro/template/dylib-test/src/: lib.rs
macro/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  ux.rs  wire.rs
test-my-crate/: Cargo.toml
test-my-crate/src/: lib.rs
token-goblin/: Cargo.toml  build.rs
token-goblin/examples/: brainfuck.rs  custom_input.rs  eval.rs  generate_enums.rs  struct_of_arrays.rs  ttmunch-replace.rs
token-goblin/src/: dylib.rs  errors.rs  ide_support.rs  lib.rs  macro_impl.rs  metadata.rs  path.rs  rust_mod_fs.rs  rustc_meta.rs  snif.rs  span_recovery.rs  syn_items.rs  template.rs  timings.rs
token-goblin/src/metadata/: targets.rs
token-goblin/template/: Cargo.toml  build.rs
token-goblin/template/src/: impls.rs  lib.rs
token-goblin/tests/: deps.rs  fixtures.rs  lazy.rs  multiple_forms.rs  snif.rs  spit.rs  testbed.rs
