[workspace]

[package]
name = "example_readme"
version = "0.1.0"
edition = "2024"

[dependencies]
token-goblin = { version = "0.2", path = "../token-goblin" }

[dev-dependencies]
token-goblin-runtime = { version = "0.2", path = "../runtime" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
# for ttmuncher examples
syn_derive = "0.2"
