[package]
name = "token-goblin"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
# Used features: span.file() -> 1.88, try_lock() -> 1.89

[lib]
proc-macro = true

[dependencies]
blake3 = "1.8"
toml = "0.5"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
libloading = "0.9"


[dev-dependencies]
trybuild = "1.0"
proc-macro2 = "1.0"

[features]
default = [] # ["use_release_profile"]
use_release_profile = [
] # Use release profile by default for token-goblin `charms`
