[package]
name = "token-goblin"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
# Used features: span.file() -> 1.88, try_lock() -> 1.89

[lib]
proc-macro = true

[dependencies]
blake3 = "1.8"
toml = "1.1.2"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
libloading = "0.9"

# Used for tests (optional cannot be used in dev-dependencies)
heck = { version = "0.5", optional = true }

[dev-dependencies]
trybuild = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
token-goblin-runtime = { path = "../runtime" }
# for ttmuncher examples
syn_derive = "0.2"
syn = { version = "2.0", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = []

# Use release profile by default for token-goblin `charms`
use_release_profile = []
