[package]
name = "token-goblin"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
description = "Inline procedural macros without a separate proc-macro crate."
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
# Used features: span.file() -> 1.88, try_lock() -> 1.89

[lib]
proc-macro = true

[dependencies]
blake3 = "1.8"
toml = "1.1.2"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
libloading = "0.9"


[dev-dependencies]
trybuild = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
token-goblin-runtime = { version = "0.2", path = "../runtime" }
syn = { version = "2.0", features = ["full"] }

[features]
default = []

# Use release profile by default for token-goblin `charms`
use_release_profile = []
