[workspace]

[package]
name = "generated-crate" # goblin-stencil: package.name
version = "0.1.0"
edition = "2024"
# goblin-stencil: package.extra

[lib]
crate-type = ["cdylib"]

[dependencies]
token-goblin-runtime = "0.1"

# goblin-stencil: dependencies

[profile.dev]
opt-level = 0
debug = "line-tables-only"
split-debuginfo = "unpacked"
lto = false

[profile.release]
debug = "line-tables-only"
split-debuginfo = "unpacked"
lto = false
